[package]
name = "my-actix-exp"
version = "0.1.0"
authors = ["Michal Czernecki <michaetto@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "^2"
actix-rt = "^1"
serde = "^1"
serde_json = "^1"
dotenv = "^0"
config = "^0"

